Fixed misalignment on tablet sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@
 
  .work-samples-visible {
      display: grid;
-     grid-template-columns: repeat(auto-fill, 300px);
+     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
      gap: 2rem;
  }
 
@@ -496,11 +496,7 @@
      }
 
      .work-samples-visible {
-         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-         justify-self: center;
-         justify-content: space-between;
-         width: 100vw;
-         padding: 0 2rem 0 2rem;
+         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));   
      }
  }
 
